<resources>
    <string name="app_name">EEG Database</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_search">Search</string>
    <string name="app_dashboard">Dashboard</string>
    <string name="app_welcome">Welcome to EEG Base!</string>
    <string name="app_underDevelopment">This application is currently under development, so its features
        are limited and maybe bugged sometimes. Thank you for your patience and bug reporting on GitHub project site!
    </string>
    <string name="app_intro">This application was created in order to cover basic needs of EEG researchers.\n
        \n
        By clicking on drop-down menu in left upper corner you can select from following sections:\n
        *
        <b>Scenarios</b>
        - Here you can look over basic scenario information and create new scenario of your own.\n
        *
        <b>Experiments</b>
        - Section for displaying basic information about experiments and for creating a new ones.\n
        *
        <b>Upload file</b>
        - If you need to upload a data file to your experiment, head over here.\n
        *
        <b>Reservations</b>
        - Here you can use EEG Lab reservation system, for creating a reservation time for your research team!\n
        *
        <b>Settings</b>
        - Gathers basic settings for this application to run properly.\n
        \n
        Hopefully you will find this application useful!
    </string>
    <string name="nav_open">Show navigation</string>
    <string name="nav_close">Hide navigation</string>
    <string name="login_mail_suffix">\ @students.zcu.cz</string>
    <string name="login_protocol">https://</string>
    <string name="menu_save">Save</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_login">Log In</string>
    <string name="logo">Logo</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="mandatory">Mandatory</string>
    <string name="optional">Optionable</string>
    <string name="error_offline">Connection is unavailable. Request could not be completed.</string>
    <string name="error_connection">Connection to server issues occurred. Try again later.</string>
    <string name="error_date_comparison">Reservation action cannot end before it even started!</string>
    <string name="error_unknown_host">Invalid host name/address!</string>
    <string name="error_invalid_password">Password must be entered!</string>
    <string name="error_invalid_url">Entered value is not invalid URL!</string>
    <string name="error_invalid_username">Username must be an email!</string>
    <string name="error_host_unreach">Host unavailable (no route exist). Is hostname/IP correct?</string>
    <string name="error_host_timeout">Connection timeout. Try again.</string>
    <string name="error_host_con_refused">Connection refused. Are your credentials correct?</string>
    <string name="error_http_400">Application made invalid request towards server.</string>
    <string name="error_http_401">User authorization check failed. Check your login information.</string>
    <string name="error_http_403">You do not have permissions for such request.</string>
    <string name="error_http_404">Location not found. This is probably a server issue, but check your server URL just to
        be sure.
    </string>
    <string name="error_http_405">Request method not allowed.</string>
    <string name="error_http_408">Request timed out.</string>
    <string name="error_http_500">Internal server error.</string>
    <string name="error_http_503">Service is currently unavailable. Try again later.</string>
    <string name="error_no_file_selected">No file selected!</string>
    <string name="error_no_experiment_selected">No experiment selected!</string>
    <string name="error_no_group_selected">No research group selected!</string>
    <string name="error_invalid_mail_format">Invalid mail format!</string>
    <string name="error_invalid_date_format">Invalid date format!</string>
    <string name="error_empty_field">Field must be filled</string>
    <string name="error_ssl">SSL connection fell apart. Try again.</string>
    <string name="error_no_type_selected">No electrode type selected!</string>
    <string name="error_no_fix_selected">No electrode fix selected!</string>
    <string name="error_no_scenario_selected">No scenario selected!</string>
    <string name="error_no_subject_selected">No subject selected!</string>
    <string name="error_no_artifact_selected">No artifact selected!</string>
    <string name="error_no_digitization_selected">No digitization selected!</string>
    <string name="error_no_electrode_system_selected">No electrode system selected!</string>
    <string name="error_no_electrode_location_selected">No electrode location selected!</string>
    <string name="error_no_weather_selected">No weather selected!</string>
    <string name="error_time_start_after_end">Time of start cannot be after the end time!</string>
    <string name="button_remove">Remove</string>
    <string name="dummy_date">DATE</string>
    <string name="dummy_from">FROM</string>
    <string name="dummy_to">TO</string>
    <string name="dummy_no_record">No record available</string>
    <string name="dummy_none">No record</string>
    <string name="working">Working</string>
    <string name="working_ws_msg">Ongoing communication with web service…</string>
    <string name="working_ws_credentials">Verifying login information…</string>
    <string name="working_ws_groups">Fetching available research groups…</string>
    <string name="working_ws_create">Creating new record…</string>
    <string name="working_ws_edit">Editing record…</string>
    <string name="working_ws_remove">Removing record…</string>
    <string name="working_ws_upload_data_file">Uploading data file…</string>
    <string name="working_ws_experiments">Fetching available experiments…</string>
    <string name="working_ws_create_user">Creating new user…</string>
    <string name="working_ws_scenarios">Fetching available scenarios…</string>
    <string name="working_ws_create_scenario">Creating new scenario…</string>
    <string name="working_ws_people">Fetching available people records…</string>
    <string name="working_ws_artifacts">Fetching existing artifacts…</string>
    <string name="working_ws_digitization">Fetching known digitization types…</string>
    <string name="working_ws_hardware">Fetching list of available hardware…</string>
    <string name="working_ws_software">Fetching list of available software…</string>
    <string name="working_ws_disease">Fetching list of diseases…</string>
    <string name="working_ws_pharmaceutical">Fetching list of pharmaceuticals…</string>
    <string name="working_ws_electrode_location">Fetching electrode locations…</string>
    <string name="working_ws_electrode_type">Fetching electrode types…</string>
    <string name="working_ws_electrode_fix">Fetching electrode fix list…</string>
    <string name="working_ws_electrode_system">Fetching electrode systems…</string>
    <string name="working_ws_create_digitization">Creating new digitization record…</string>
    <string name="working_ws_create_artifact">Creating new artifact record…</string>
    <string name="working_ws_create_disease">Creating new disease record…</string>
    <string name="working_ws_create_electrode_location">Creating new electrode location…</string>
    <string name="working_ws_create_experiment">Creating new experiment…</string>
    <string name="working_ws_weather">Fetching existing weather records…</string>
    <string name="working_ws_create_weather">Creating new weather record…</string>
    <string name="working_ws_create_electrode_fix">Creating new electrode fix…</string>
    <string name="app_reser">Reservations</string>
    <string name="reservation_empty_refresh">No fetched reservation. Create a new one or tap to refresh.</string>
    <string name="reser_create">Create reservation</string>
    <string name="reser_created">Reservation created.</string>
    <string name="reser_edited">Reservation edited.</string>
    <string name="reser_removed">Reservation removed.</string>
    <string name="reser_removed_update">Reservation removed, please update view.</string>
    <string name="reser_agenda_list_header">Reservations</string>
    <string name="reser_add_group_label">Research group</string>
    <string name="time_from">From time</string>
    <string name="time_to">To time</string>
    <string name="time_change">Change time</string>
    <string name="time_choose_date">Choose date</string>
    <string name="time_choose_time">Choose time</string>
    <string name="time_span">Time span</string>
    <string name="detail">Details</string>
    <string name="reser_detail_group">Research group</string>
    <string name="reser_detail_from">From time</string>
    <string name="reser_detail_to">To time</string>
    <string name="reser_detail_separator">-</string>
    <string name="reser_detail_creator">Creator</string>
    <string name="reser_detail_time">Time span</string>
    <string name="reser_detail_contact">Contact</string>
    <string name="reser_dialog_remove_header">Removing reservation</string>
    <string name="reser_dialog_remove_body">Are you sure you want to remove this reservation?</string>
    <string name="app_settings">Settings</string>
    <string name="settings_url">Service URL</string>
    <string name="settings_username">Username</string>
    <string name="settings_password">Password</string>
    <string name="settings_saved">Settings saved.</string>
    <string name="app_data_file">Upload file</string>
    <string name="fchooser">Select file</string>
    <string name="settings_first_day">Monday as first day in week</string>
    <string name="app_characters_left">Characters left:</string>
    <string name="data_file_select">Select file</string>
    <string name="data_file_experiment">Experiment</string>
    <string name="data_file_description">File description</string>
    <string name="data_file_upload">Upload file</string>
    <string name="app_experiments">Experiments</string>
    <string name="experiment_empty_refresh">No fetched experiments. Create new one or tap to refresh list.</string>
    <string name="experiment_add">Add experiment</string>
    <string name="experiment_list_all">All experiments</string>
    <string name="experiment_list_mine">My experiments</string>
    <string name="experiment_id">Experiment ID</string>
    <string name="experiment_env_note">Environment note</string>
    <string name="experiment_weather">Weather</string>
    <string name="experiment_weather_title">Title</string>
    <string name="experiment_weather_description">Description</string>
    <string name="experiment_artifact">Artifact</string>
    <string name="experiment_artifact_add">Create new artifact record</string>
    <string name="experiment_artifact_compensation">Compensation</string>
    <string name="experiment_artifact_reject">Reject condition</string>
    <string name="experiment_digitization">Digitization</string>
    <string name="experiment_digitization_add">Create new digitization record</string>
    <string name="experiment_digitization_filter">Filter</string>
    <string name="experiment_electrodes">Electrodes</string>
    <string name="experiment_electrode_impedance">Impedance [Ω]</string>
    <string name="experiment_add_electrode_location">Select electrodes\' locations</string>
    <string name="experiment_add_electrode_system">Electrode system</string>
    <string name="scenario_name">Scenario name</string>
    <string name="scenario_description">Description</string>
    <string name="scenario_mime">File type</string>
    <string name="scenario_file_name">File name</string>
    <string name="scenario_file_length">File size</string>
    <string name="scenario_add_group_label">Research group</string>
    <string name="scenario_private">Private scenario</string>
</resources>