<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout  
    	xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
            android:id="@+id/settings_username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_username"/>

    <requestFocus/>

    <EditText
            android:id="@+id/settings_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@string/login_mail_suffix">

        <requestFocus/>
    </EditText>


    <TextView
            android:id="@+id/settings_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_password"/>

    <EditText
            android:id="@+id/settings_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    <TextView
            android:id="@+id/settings_url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_url"/>

    <EditText
            android:id="@+id/settings_url_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:text="@string/login_protocol"/>
    
    <Button
        android:id="@+id/buttonSynchronize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_synchronize" />

</LinearLayout>   


