<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:stretchColumns="1"
                 android:padding="5dp">

        <TableRow>

            <Button
                    android:id="@+id/fromTimeButton"
                    android:drawableLeft="@drawable/ic_action_time"
                    android:onClick="fromTimeClick"
                    android:text="@string/time_choose_time"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            <TextView
                    android:id="@+id/fromLabel"
                    android:text="@string/time_from"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            <TextView
                    android:id="@+id/fromField"
                    android:text="@string/dummy_from"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
        </TableRow>

        <TableRow>

            <Button
                    android:id="@+id/toTimeButton"
                    android:drawableLeft="@drawable/ic_action_time"
                    android:onClick="toTimeClick"
                    android:text="@string/time_choose_time"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            <TextView
                    android:id="@+id/toLabel"
                    android:text="@string/time_to"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

            <TextView
                    android:id="@+id/toField"
                    android:text="@string/dummy_to"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
        </TableRow>

        <TableRow>

            <TextView
                    android:id="@+id/groupLabel"
                    android:text="@string/reser_add_group_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>


            <Spinner
                    android:id="@+id/groupList"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    >
            </Spinner>
        </TableRow>
    </TableLayout>
</ScrollView>